--- a/static/unknown.json
+++ b/static/unknown.json
@@ -1,1 +1,1 @@
-{"name": "unknown-table", "title": "Unknown values for the lexicon", "type": [], "authority": [], "locality": [], "subject": []}
+{"name": "unknown-table", "title": "Unknown values for the lexicon", "type": ["Doutrina::Artigo de revista"], "authority": [], "locality": [], "subject": ["Custo benefício"]}
